# light-years-game

./: .gitignore  BOOTSTRAP.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  plan.md  vcpkg.json
.github/workflows/: build.yml
assets/: .gitkeep
src/: main.cpp
src/core/: Application.cpp  Application.h
